# fantastic-snarks-homework

./: Cargo.toml  README.md
arkworks/: Cargo.toml  README.md
arkworks/src/: common.rs  constraints.rs  lib.rs  merkle.rs  note.rs
src/: card.rs  common.rs  constraints.rs  constraints_showprice.rs  hash.rs  lib.rs  util.rs
