[package]
name = "merkle-tree-example"
version = "0.3.0"
authors = ["arkworks contributors"]
edition = "2018"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-ed-on-bls12-381 = { version = "0.4", features = ["r1cs"] }
ark-bls12-381 = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false  }

ark-r1cs-std = { version = "0.4", default-features = false }
ark-snark = { version = "0.4", default-features = false }

ark-serialize = { version = "0.4.0" }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
rand = "0.8.5"

[dependencies.ark-crypto-primitives]
path = "/tmp/crypto-primitives"
#git = "https://github.com/arkworks-rs/crypto-primitives.git"
#rev = "4b3bdac"
default-features = true
features = [ "r1cs", "crh", "merkle_tree" ]

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[lib]
name = "arkworks_merkle_tree_example"
path = "src/lib.rs"
